release: v2.0.1 — tests, CI, security fixes, and Android ABI support
- Add unit tests: CarlosServiceTest (5), VPNPeerServiceTest (7),
  PacketCaptureServiceTest (1) — 13 tests, all passing
- Add CI workflows: backend-tests.yml and android-assemble.yml
- Fix duplicate bcprov-jdk18on dependency in pom.xml
- Remove spring-boot-starter-webflux conflict, keep spring-webflux
- Fix PacketCaptureService: add outer restart loop for recovery
- Fix PacketController: configurable APK download path
- Fix VPNPeerService: DB-backed IP assignment, remove hardcoded admin bypass
- Fix CarlosService: full RFC1918 via InetAddress.isSiteLocalAddress(),
  wire hasApiKey() to @Value property, restore history field
- Fix MainActivity WebView: MIXED_CONTENT_COMPATIBILITY_MODE
- Upgrade Android compileSdk/targetSdk to 35
- Add ABI splits for arm64-v8a + armeabi-v7a (64-bit native, 32-bit compat)
- Update application.properties with netpulse.android.apk-path
- Add auth/ and rbac/ package files, static HTML templates